Project personal_finance_tracker { database_type: "PostgreSQL" Note: "Schema for Personal Finance Tracking App" }

Table users { id SERIAL [primary key] first_name VARCHAR(255) [not null] last_name VARCHAR(255) [not null] email VARCHAR(255) [unique, not null] password_hash VARCHAR(255) [not null] created_at TIMESTAMP [default: CURRENT_TIMESTAMP]

Note: "Stores user profiles and authentication details" }

Table accounts { id SERIAL [primary key] user_id INTEGER [ref: > users.id, not null] name VARCHAR(255) [not null] type ENUM('checking', 'savings', 'credit', 'other') [not null] balance DECIMAL(10,2) [default: 0.00] created_at TIMESTAMP [default: CURRENT_TIMESTAMP]

Note: "Stores user's financial accounts"

Indexes { user_id [type: btree] } }

Table transactions { id SERIAL [primary key] account_id INTEGER [ref: > accounts.id, not null] user_id INTEGER [ref: > users.id, not null] amount DECIMAL(10,2) [not null] type ENUM('income', 'expense') [not null] category VARCHAR(255) [not null] date TIMESTAMP [not null] description TEXT created_at TIMESTAMP [default: CURRENT_TIMESTAMP]

Note: "Stores manual transactions with categorization"

Indexes { (account_id, date) [type: btree] (user_id, category) [type: btree] date [type: btree] } }

Ref: accounts.user_id > users.id [on delete cascade] Ref: transactions.account_id > accounts.id [on delete cascade] Ref: transactions.user_id > users.id [on delete cascade]